<resources>
    <string name="app_name" translatable="false">中華航空</string>
    <string name="app_version_name" translatable="false">1.0.38</string>
    <string name="app_develop_name" translatable="false">R01</string>
    <string name="action_example" translatable="false">Example action</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="facebook_app_id" translatable="false">626397757519549</string>
    <string name="youtube_api_key" translatable="false">AIzaSyAGg96COck7hN6JSdX-1C3Xeguqmc7bHUg</string>
    <string name="server_api_key" translatable="false">AIzaSyBsJSb0w1o_4mvrxog5ShpBFxsLAi7F9M8</string>
    <string name="web_api_key" translatable="false">AIzaSyCK0QVHfffc_gX9LdzxP4YH6KTjdsAAtrU</string>
    <string name="google_map_api_key" translatable="false">AIzaSyA8bgpyq886DQWxH4qcYd5AcwIRyiBnffM</string>
    <string name="google_urlshortener_api_key" translatable="false">AIzaSyCijTKrvuBFMg4MIuoGvc3sRCwHO9g3tmA</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="error_player" translatable="false">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="minVersion" translatable="false">minVersion</string>
    <string name="my_trips_goto" translatable="false">%1$s ➞ %2$s</string>
    <string name="skyteam_url" translatable="false">https://applications.skyteam.com/routemapper/#/flightInput</string>
    <string name="weather_code" translatable="false">weather_code_</string>
    <string name="weather_little" translatable="false">weather_little_</string>
    <string name="weather_day" translatable="false">weather_day_</string>
    <string name="weather_units_c" translatable="false">&#176;C</string>
    <string name="weather_units" translatable="false">&#176;</string>
    <string name="manage_ticket_ws_url" translatable="false">https://bookingportal.china-airlines.com/eRetailPortal/Mobile.svc/Mobile/Inquiry</string>
    <string name="scheme" translatable="false">calmobile30uat</string>
    <string name="scheme_eshopping" translatable="false">caleshoppinguat</string>
    <string name="scheme_eshopping_source" translatable="false">eshopping</string>
    <string name="scheme_eshopping_action" translatable="false">login</string>
    <string name="eshopping_packagename" translatable="false">com.chinaairlines.caleshopping</string>
    <string name="exquisitetravel_packagename" translatable="false">tw.com.mook.exquisitetravel</string>
    <string name="facebook_packagename" translatable="false">com.facebook.katana</string>
    <string name="facebook_deeplink_global" translatable="false">fb://facewebmodal/f?href=https://www.facebook.com/chinaairlines.travelchannel</string>
    <string name="facebook_deeplink_US" translatable="false">fb://facewebmodal/f?href=https://www.facebook.com/ChinaAirlinesUS</string>
    <string name="facebook_deeplink_JP" translatable="false">fb://facewebmodal/f?href=https://www.facebook.com/ChinaAirlinesJapan</string>
    <string name="facebook_fanpage_global" translatable="false">https://www.facebook.com/chinaairlines.travelchannel/</string>
    <string name="facebook_fanpage_US" translatable="false">https://www.facebook.com/ChinaAirlinesUS/</string>
    <string name="facebook_fanpage_JP" translatable="false">https://www.facebook.com/ChinaAirlinesJapan/</string>
    <string name="wechat_packagename" translatable="false">com.tencent.mm</string>
    <string name="wechat_fanpage_global" translatable="false">http://weixin.qq.com/r/5Uy4oKHEEPxvreXD9xn3</string>
    <string name="weibo_packagename" translatable="false">com.sina.weibo</string>
    <string name="weibo_deeplink_global" translatable="false">sinaweibo://userinfo?uid=3658998552</string>
    <string name="weibo_fanpage_global" translatable="false">http://www.weibo.com/u/3658998552</string>
    <string name="youtube_packagename" translatable="false">com.google.android.youtube</string>
    <string name="youtube_deeplink_global" translatable="false">https://www.youtube.com/watch?v=eCwrPB4xR1A</string>
    <string name="youtube_fanpage_global" translatable="false">https://www.youtube.com/user/TheCHINAAIRLINES</string>
    <string name="twitter_packagename" translatable="false">com.twitter.android</string>
    <string name="twitter_deeplink_JP" translatable="false">twitter://user?screen_name=ChinaairlinesJP</string>
    <string name="twitter_fanpage_JP" translatable="false">https://twitter.com/ChinaairlinesJP</string>
    <string name="instagram_packagename" translatable="false">com.instagram.android</string>
    <string name="instagram_deeplink_global" translatable="false">https://www.instagram.com/_u/chinaairlines.tw/</string>
    <string name="instagram_deeplink_JP" translatable="false">https://www.instagram.com/_u/chinaairlines.jp/</string>
    <string name="instagram_deeplink_US" translatable="false">https://www.instagram.com/_u/chinaairlines.usa/</string>
    <string name="instagram_fanpage_global" translatable="false">https://www.instagram.com/chinaairlines.tw/</string>
    <string name="instagram_fanpage_JP" translatable="false">https://www.instagram.com/chinaairlines.jp/</string>
    <string name="instagram_fanpage_US" translatable="false">https://www.instagram.com/chinaairlines.usa/</string>
    <string name="ai_service_ws_url" translatable="false">https://calaics01t.china-airlines.com/chatindex.aspx</string>
    <string name="noshowfee_url">https://calec.china-airlines.com/NoShowFee/PNRQuery.aspx?lang=en-us&#038;country=us&#038;locale=en</string>
    <string-array name="sign_up_contry_code_list" translatable="false">
        <item name="tw">886</item>
        <item name="jp">81</item>
        <item name="cn">86</item>
        <item name="us">1</item>
        <item name="ca">1</item>
        <item name="kr">82</item>
        <item name="mh">692</item>
        <item name="sg">65</item>
        <item name="gb">44</item>
        <item name="fr">33</item>
        <item name="th">66</item>
        <item name="id">62</item>
        <item name="in">91</item>
        <item name="de">49</item>
        <item name="cl">56</item>
        <item name="cz">420</item>
        <item name="gr">30</item>
        <item name="it">39</item>
        <item name="ch">41</item>
        <item name="nl">31</item>
    </string-array>
    <string-array name="sign_up_nationality_list" translatable="false">
        <item name="mr">台灣</item>
        <item name="ms">日本</item>
        <item name="ms">中國大陸</item>
        <item name="ms">美國</item>
        <item name="ms">加拿大</item>
        <item name="ms">韓國</item>
        <item name="ms">馬來西亞</item>
        <item name="ms">新加坡</item>
        <item name="ms">泰國</item>
        <item name="ms">印尼</item>
        <item name="ms">法國</item>
        <item name="ms">英國</item>
        <item name="ms">紐西蘭</item>
        <item name="ms">德國</item>
        <item name="ms">智利</item>
        <item name="ms">捷克</item>
        <item name="ms">希臘</item>
        <item name="ms">義大利</item>
        <item name="ms">瑞士</item>
        <item name="ms">荷蘭</item>
    </string-array>
    <string name="system_no_network_connection">No Internet Connection</string>
    <string name="system_no_network_connection_message">Please connect to Wi-Fi or Cellular Data Network to update your information.</string>
    <string name="system_settings">Settings</string>
    <string name="system_dismiss">Dismiss</string>
    <string name="china_airlines">China Airlines</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="confirm">Confirm</string>
    <string name="back_to_home">Back to Home</string>
    <string name="done">Done</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="finish">Send</string>
    <string name="warning">Warning</string>
    <string name="exit_app_message">Do you wish to exit?</string>
    <string name="exit">Exit</string>
    <string name="please_input_field">Please Input %1$s Field</string>
    <string name="please_input_pnr">Please Input Reservation/Ticket No. Field</string>
    <string name="please_login">Please Login!</string>
    <string name="login_success">Logged In Successfully!</string>
    <string name="back_to_mytrips">Back to My Bookings</string>
    <string name="back_to_boarding_pass">Back to Boarding Pass &amp; My Wallet</string>
    <string name="select">select</string>
    <string name="loading">Loading...</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="cancel">Cancel</string>
    <string name="delay">Delayed</string>
    <string name="menu_log_out">Log Out</string>
    <string name="menu_miles">%s Mile</string>
    <string name="menu_become_a_dynasty_flyer">Join the Dynasty Flyer Program</string>
    <string name="menu_welcome_tag">Welcome to China Airlines</string>
    <string name="menu_log_in">Login</string>
    <string name="menu_sign_up">Sign Up</string>
    <string name="menu_title_homepage">Home</string>
    <string name="menu_title_book_ticket">Book Flights</string>
    <string name="menu_title_check_in">Check-in</string>
    <string name="menu_title_flight_status">Flight Status</string>
    <string name="menu_title_timetable">Timetable</string>
    <string name="menu_title_extra_services">Add-ons</string>
    <string name="menu_title_e_shopping">e-Shopping</string>
    <string name="menu_title_promotions">Personalized Recommendations</string>
    <string name="menu_title_ai_service">智能客服</string>
    <string name="menu_title_about">Contact Us</string>
    <string name="menu_title_setting">Settings</string>
    <string name="menu_title_noshowfee">No Show Fee</string>
    <string name="menu_title_boarding_pass_ewallet">Boarding Pass &amp; My Wallet</string>
    <string name="menu_title_my_trips">My Bookings</string>
    <string name="menu_title_manage_miles">Manage Miles</string>
    <string name="menu_title_personal_detail">Personal Details</string>
    <string name="start_page_update">Update</string>
    <string name="start_page_cancel">Cancel</string>
    <string name="start_page_more">More</string>
    <string name="gdpr_url">https://mobile30.china-airlines.com/mobile30/redirurl/gdpr.aspx?lang=EN&amp;uuid=</string>
    <string name="input_detail_hello">Hello</string>
    <string name="input_detail_comma">,</string>
    <string name="input_detail_update_email_msg">Have you shared your mail with others? This mail %1$s is belonging to more than one card number. Please update your email to correct it.</string>
    <string name="input_detail_send">Change</string>
    <string name="become_a_dynasty_flyer_hello">Hi </string>
    <string name="find_my_booking_traveling_with_other_companions">are you traveling with other companions?</string>
    <string name="miles">Mile</string>
    <string name="miles_overdue_in_6_months">Miles expiring within 6 months</string>
    <string name="due_date">Expiration Date</string>
    <string name="my_miles">Manage Miles</string>
    <string name="your_miles_has_been_update">Miles Updated</string>
    <string name="miles_have_been_imported_to_your_account">You have been credited with %1$s miles for %4$s (%2$s-%3$s)</string>
    <string name="are_you_sure_you_want_to_disconnect">Do you wish to disconnect your %1$s account?</string>
    <string name="connecting_to_social_account_makes_you_log_in_more_easier">To login with ease and enjoy our personalized services, please connect to your social network account.</string>
    <string name="manage_miles_not_find">Mileage Information Not Found</string>
    <string name="scheme_auth_eshopping_name">SkyBoutique</string>
    <string name="scheme_auth_eshopping_note"></string>
    <string name="scheme_auth_eshopping_note_text">中華航空App 會將您的個人資訊提供給 華航免稅品(預訂)</string>
    <string name="scheme_auth_eshopping_button_agree">同意</string>
</resources>