<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_login">

    <ci.ui.view.NavigationBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56px"
        android:layout_alignParentTop="true" >
    </ci.ui.view.NavigationBar>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:paddingLeft="30px"
        android:paddingRight="30px"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="90px"
            android:layout_height="90px"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_eshopping_app_icon"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10px"
            android:text="@string/scheme_auth_eshopping_name"
            android:textColor="@color/white_four"
            android:textSize="18px"
            android:gravity="center"
            style="@style/light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:text="@string/scheme_auth_eshopping_note"
            android:textColor="@color/white_four"
            android:textSize="16px"
            android:gravity="left|center"
            style="@style/light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scheme_auth_eshopping_note_text"
            android:textColor="@color/white_four"
            android:textSize="16px"
            android:gravity="left|center"
            style="@style/medium"/>
    </LinearLayout>

    <!-- 按鈕 -->
    <LinearLayout
        android:id="@+id/ll_ask_change_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_marginBottom="20px"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="150px"
            android:layout_height="40px"
            android:background="@drawable/bg_btn_blue_selector"
            android:minHeight="0px"
            android:minWidth="0px"
            android:layout_marginEnd="10px"
            android:text="@string/cancel"
            android:textColor="@color/white_four"
            android:textSize="16px"
            style="@style/regular"/>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="150px"
            android:layout_height="40px"
            android:layout_marginStart="10px"
            android:minHeight="0px"
            android:minWidth="0px"
            android:background="@drawable/bg_btn_pink_agree_selector"
            android:text="@string/scheme_auth_eshopping_button_agree"
            android:textColor="@color/white_four"
            android:textSize="16px"
            style="@style/regular"/>

    </LinearLayout>

</RelativeLayout>
